--- a/5-model_selection.ipynb
+++ b/5-model_selection.ipynb
@@ -7,14 +7,10 @@
    "outputs": [],
    "source": [
     "##################################################\n",
-    "# PROG8420 - Programming for Big Data           ##\n",
-    "# Final Project                                 ##\n",
+    "# Property Price Prediction using Linear        ##\n",
+    "# Regression Models                             ##\n",
     "#                                               ##\n",
-    "# Submission Date: 20-Apr-2020                  ##\n",
-    "#                                               ##\n",
-    "# Team Members:                                 ##\n",
-    "#   1. Balamurugan Kalaiarasu (8680119)         ##\n",
-    "#   2. Aayush Vashistha (8681386)               ##\n",
+    "# Created By:  Aayush Vashistha (8681386)       ##\n",
     "##################################################"
    ]
   },
